--- a/src/app/presentation/components/text-boxes/textMessageBox/textMessageBox.component.html
+++ b/src/app/presentation/components/text-boxes/textMessageBox/textMessageBox.component.html
@@ -12,7 +12,7 @@
                 type="text"
                 autofocus
                 class="flex w-full border rounded-xl text-gray-800 focus:outline-none focus:border-indigo-300 pl-4 h-10"
-                placeholder="Mensaje..."
+                [placeholder]="placeholder"
                 formControlName="prompt"
                 [autocomplete]="disableCorrections ? 'on' : 'off'"
                 [spellcheck]="disableCorrections ? 'on' : 'off'"
