--- a/src/app/presentation/components/text-boxes/textMessageBoxFile/textMessageBoxFile.component.html
+++ b/src/app/presentation/components/text-boxes/textMessageBoxFile/textMessageBoxFile.component.html
@@ -23,7 +23,7 @@
                 type="text"
                 autofocus
                 class="flex w-full border rounded-xl text-gray-800 focus:outline-none focus:border-indigo-300 pl-4 h-10"
-                placeholder="Mensaje..."
+                [placeholder]="placeholder"
                 formControlName="prompt"
             >
 
