--- a/src/app/presentation/pages/textToAudioPage/textToAudioPage.component.html
+++ b/src/app/presentation/pages/textToAudioPage/textToAudioPage.component.html
@@ -1,1 +1,36 @@
-<p>textToAudioPage works!</p>,
+<div class="chat-container">
+
+    <div class="chat-messages">
+
+        <div class="grid gap-y-2">
+            
+            <!-- Chat Messages -->
+            <app-chat-message
+                text="Escribe el texto que quieras convertir a voz y seleciona un tipo de voz"
+            />
+
+            @for (message of messages(); track $index) {
+                @if (message.isGpt) {
+                    <app-chat-message [text]="message.text" [audioUrl]="message.audioUrl" />
+                }@else {
+                    <app-my-message [text]="message.text" />
+                }
+            }
+
+            @if (isLoading()) {
+                <app-typing-loader />
+            }
+
+        </div>
+
+    </div>
+
+    <!-- MessageBox -->
+
+    <app-text-message-box-select 
+        [options]="voices()"
+        placeholder="Escribe aqui lo que deseas" 
+        (onMessage)="handleMessageWithSelect($event)"
+    />
+
+</div>
