--- a/src/app/presentation/pages/audioToTextPage/audioToTextPage.component.html
+++ b/src/app/presentation/pages/audioToTextPage/audioToTextPage.component.html
@@ -1,1 +1,37 @@
-<p>audioToTextPage works!</p>,
+<div class="chat-container">
+
+    <div class="chat-messages">
+
+        <div class="grid gap-y-2">
+            
+            <!-- Chat Messages -->
+            <app-chat-message
+                text="¿Escribe el texto que quieres que revise?"
+            />
+
+            @for (message of messages(); track $index) {
+                @if (message.isGpt) {
+                    <app-chat-message [text]="message.text" />
+                }@else {
+                    <app-my-message [text]="message.text" />
+                }
+            }
+
+            @if (isLoading()) {
+                <app-typing-loader />
+            }
+
+        </div>
+
+    </div>
+
+    <!-- MessageBox -->
+
+    <app-text-message-box-file 
+        placeholder="Escribe aqui lo que deseas" 
+        (onMessage)="handleMessageWithFile($event)"
+    />
+
+    <!-- TODO: Hacer que cuando se seleccione un archivo se muestre en pantalla que se ha seleccionado el archivo -->
+
+</div>
